--- a/package.json
+++ b/package.json
@@ -41,5 +41,8 @@
         "webpack-cli": "3.3.12",
         "webpack-dev-server": "3.11.0",
         "whatwg-fetch": "^3.5.0"
+    },
+    "browser": {
+        "fs": false
     }
 }
