--- a/package.json
+++ b/package.json
@@ -34,9 +34,12 @@
         "babel-loader": "^8.2.2",
         "copy-webpack-plugin": "^6.3.2",
         "core-js": "^3.8.0",
+        "css-loader": "^6.5.0",
+        "file-loader": "^6.2.0",
         "html-loader": "^1.3.2",
         "html-webpack-plugin": "^4.5.0",
         "mini-css-extract-plugin": "^1.3.1",
+        "style-loader": "^3.3.1",
         "webpack": "4.44.2",
         "webpack-cli": "3.3.12",
         "webpack-dev-server": "3.11.0",
