--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@jdultra/UltraGlobe",
     "version": "1.0.0",
-    "description": "An OGC WMS viewer for Three.js",
+    "description": "A globe in threejs with support for WMS maps, elevation and OGC 3DTiles!!",
     "main": "tileset.js",
     "scripts": {
         "build": "webpack",
@@ -26,7 +26,7 @@
         "gltf-validator": ">=2.0.0-dev.3.3",
         "lodash": ">=4.17.20",
         "regenerator-runtime": ">=0.13.7",
-        "three": ">=0.125.0"
+        "@jdultra/threedtiles": "3.0.4"
     },
     "devDependencies": {
         "@babel/core": "^7.12.9",
