--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@jdultra/UltraGlobe",
+    "name": "@jdultra/ultra-globe",
     "version": "1.0.0",
     "description": "A globe in threejs with support for WMS maps, elevation and OGC 3DTiles!!",
     "main": "tileset.js",
