--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@jdultra/ultra-globe",
-    "version": "1.0.3",
+    "version": "1.0.4",
     "description": "A globe in threejs with support for WMS maps, elevation and OGC 3DTiles!!",
     "main": "tileset.js",
     "scripts": {
@@ -26,7 +26,8 @@
         "gltf-validator": ">=2.0.0-dev.3.3",
         "lodash": ">=4.17.20",
         "regenerator-runtime": ">=0.13.7",
-        "@jdultra/threedtiles": "3.0.7"
+        "path-browserify": "^1.0.1",
+        "@jdultra/threedtiles": "3.0.8"
     },
     "devDependencies": {
         "@babel/core": "^7.12.9",
@@ -40,9 +41,9 @@
         "html-webpack-plugin": "^4.5.0",
         "mini-css-extract-plugin": "^1.3.1",
         "style-loader": "^3.3.1",
-        "webpack": "4.44.2",
-        "webpack-cli": "3.3.12",
-        "webpack-dev-server": "3.11.0",
+        "webpack": "^5.65.0",
+        "webpack-cli": "4.9.1",
+        "webpack-dev-server": "4.7.1",
         "whatwg-fetch": "^3.5.0"
     }
 }
