--- a/package.json
+++ b/package.json
@@ -23,27 +23,27 @@
     "author": "Emeric Beaufays",
     "license": "MIT",
     "dependencies": {
-        "gltf-validator": ">=2.0.0-dev.3.3",
+        "@jdultra/threedtiles": "3.1.4",
+        "gltf-validator": "^2.0.0-dev.3.5",
         "lodash": ">=4.17.20",
-        "regenerator-runtime": ">=0.13.7",
         "path-browserify": "^1.0.1",
-        "@jdultra/threedtiles": "3.0.8"
+        "regenerator-runtime": "^0.13.9"
     },
     "devDependencies": {
-        "@babel/core": "^7.12.9",
-        "@babel/preset-env": "^7.12.7",
-        "babel-loader": "^8.2.2",
+        "@babel/core": "^7.17.8",
+        "@babel/preset-env": "^7.16.11",
+        "babel-loader": "^8.2.4",
         "copy-webpack-plugin": "^6.3.2",
-        "core-js": "^3.8.0",
-        "css-loader": "^6.5.0",
+        "core-js": "^3.21.1",
+        "css-loader": "^6.7.1",
         "file-loader": "^6.2.0",
         "html-loader": "^1.3.2",
         "html-webpack-plugin": "^4.5.0",
-        "mini-css-extract-plugin": "^1.3.1",
+        "mini-css-extract-plugin": "^1.6.2",
         "style-loader": "^3.3.1",
-        "webpack": "^5.65.0",
+        "webpack": "^5.70.0",
         "webpack-cli": "4.9.1",
-        "webpack-dev-server": "4.7.1",
+        "webpack-dev-server": "^4.7.4",
         "whatwg-fetch": "^3.5.0"
     }
 }
