--- a/package.json
+++ b/package.json
@@ -24,28 +24,28 @@
     "license": "MIT",
     "dependencies": {
         "@jdultra/threedtiles": "3.2.0",
-        "gltf-validator": "^2.0.0-dev.3.6",
+        "epsg-index": "^1.0.0",
+        "gltf-validator": "^2.0.0-dev.3.8",
         "lodash": ">=4.17.20",
         "path-browserify": "^1.0.1",
-        "regenerator-runtime": "^0.13.9",
-        "epsg-index": "^1.0.0",
-        "proj4": "^2.4.4"
+        "proj4": "^2.4.4",
+        "regenerator-runtime": "^0.13.9"
     },
     "devDependencies": {
-        "@babel/core": "^7.17.9",
-        "@babel/preset-env": "^7.16.11",
+        "@babel/core": "^7.18.0",
+        "@babel/preset-env": "^7.18.0",
         "babel-loader": "^8.2.5",
         "copy-webpack-plugin": "^6.3.2",
-        "core-js": "^3.22.1",
+        "core-js": "^3.22.6",
         "css-loader": "^6.7.1",
         "file-loader": "^6.2.0",
         "html-loader": "^1.3.2",
         "html-webpack-plugin": "^4.5.0",
         "mini-css-extract-plugin": "^1.6.2",
         "style-loader": "^3.3.1",
-        "webpack": "^5.72.0",
+        "webpack": "^5.72.1",
         "webpack-cli": "4.9.1",
-        "webpack-dev-server": "^4.8.1",
+        "webpack-dev-server": "^4.9.0",
         "whatwg-fetch": "^3.5.0"
     }
 }
