--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@jdultra/ultra-globe",
-    "version": "1.2.4",
-    "description": "A globe in threejs with support for WMS maps, elevation and OGC 3DTiles!!",
+    "version": "1.2.5",
+    "description": "A globe in threejs with support for WMS maps, elevation and OGC 3DTiles",
     "main": "tileset.js",
     "scripts": {
         "build": "webpack",
