--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@jdultra/ultra-globe",
-    "version": "2.0.1",
+    "version": "2.0.5",
     "description": "A globe in threejs with support for WMS maps, elevation and OGC 3DTiles",
     "main": "tileset.js",
     "files": [
@@ -28,13 +28,15 @@
     ],
     "author": "Emeric Beaufays",
     "license": "MIT",
+    "peerDependencies": {
+        "proj4": "^2.9.0",
+        "epsg-index": "^1.0.0"
+    },
     "dependencies": {
         "@jdultra/threedtiles": "9.1.7",
-        "epsg-index": "^1.0.0",
         "gltf-validator": "^2.0.0-dev.3.9",
         "lodash": ">=4.17.20",
         "path-browserify": "^1.0.1",
-        "proj4": "^2.9.0",
         "regenerator-runtime": "^0.13.11"
     },
     "devDependencies": {
@@ -50,6 +52,7 @@
         "mini-css-extract-plugin": "^1.6.2",
         "style-loader": "^3.3.2",
         "webpack": "^5.76.1",
+        "webpack-bundle-analyzer": "^4.8.0",
         "webpack-cli": "4.9.1",
         "webpack-dev-server": "^4.12.0",
         "whatwg-fetch": "^3.5.0"
