--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@jdultra/ultra-globe",
-    "version": "2.1.4",
+    "version": "2.2.0",
     "description": "A globe in threejs with support for WMS maps, elevation and OGC 3DTiles",
     "main": "tileset.js",
     "files": [
@@ -29,15 +29,17 @@
     "author": "Emeric Beaufays",
     "license": "MIT",
     "peerDependencies": {
-        "proj4": "^2.9.0",
-        "epsg-index": "^1.0.0"
+        "epsg-index": "^1.0.0",
+        "proj4": "^2.9.0"
     },
     "dependencies": {
         "@jdultra/threedtiles": "9.1.9",
         "gltf-validator": "^2.0.0-dev.3.9",
         "lodash": ">=4.17.20",
         "path-browserify": "^1.0.1",
-        "regenerator-runtime": "^0.13.11"
+        "regenerator-runtime": "^0.13.11",
+        "three-custom-shader-material": "^5.3.7"
+        
     },
     "devDependencies": {
         "@babel/core": "^7.21.3",
