--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
     "name": "@jdultra/ultra-globe",
-    "version": "3.0.3",
+    "version": "4.0.0",
     "description": "A globe in threejs with support for WMS maps, elevation and OGC 3DTiles",
-    "main": "tileset.js",
+    "main": "dist/ultraglobe.min.js",
+    "types": "dist/entry.d.ts",
     "files": [
-        "dist/*",
+        "dist/**/*",
         "README.md",
         "LICENSE"
     ],
     "scripts": {
-        "build": "webpack --config webpack.prod.config.js",
+        "build:types": "tsc --declaration --emitDeclarationOnly --allowJs --outDir dist",
+        "build": "webpack --config webpack.prod.config.js && npm run build:types",
         "watch": "webpack --watch --config webpack.dev.config.js",
         "dev": "webpack-dev-server --config webpack.dev.config.js",
         "build-dev": "webpack --config webpack.dev.config.js"
@@ -30,18 +32,18 @@
     "author": "Emeric Beaufays",
     "license": "MIT",
     "peerDependencies": {
-        "epsg-index": "^1.0.0",
-        "proj4": "^2.9.0"
+        
     },
     "dependencies": {
-        "@jdultra/threedtiles": "9.1.20",
+        "@jdultra/threedtiles": "9.1.22",
         "fast-simplex-noise": "^4.0.0",
         "gltf-validator": "^2.0.0-dev.3.9",
         "lodash": ">=4.17.20",
         "path-browserify": "^1.0.1",
         "regenerator-runtime": "^0.13.11",
-        "three": "0.152.0",
-        "three-custom-shader-material": "5.3.7"
+        "three": "^0.156.0",
+        "epsg-index": "^1.0.0",
+        "proj4": "^2.9.0"
     },
     "devDependencies": {
         "@babel/core": "^7.21.3",
@@ -55,6 +57,7 @@
         "html-webpack-plugin": "^4.5.0",
         "mini-css-extract-plugin": "^1.6.2",
         "style-loader": "^3.3.2",
+        "typescript": "^5.2.2",
         "webpack": "^5.76.1",
         "webpack-bundle-analyzer": "^4.8.0",
         "webpack-cli": "^4.10.0",
