--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@jdultra/ultra-globe",
-    "version": "4.0.0",
+    "version": "4.0.1",
     "description": "A globe in threejs with support for WMS maps, elevation and OGC 3DTiles",
     "main": "dist/ultraglobe.min.js",
     "types": "dist/entry.d.ts",
@@ -14,7 +14,8 @@
         "build": "webpack --config webpack.prod.config.js && npm run build:types",
         "watch": "webpack --watch --config webpack.dev.config.js",
         "dev": "webpack-dev-server --config webpack.dev.config.js",
-        "build-dev": "webpack --config webpack.dev.config.js"
+        "build-dev": "webpack --config webpack.dev.config.js",
+        "generate-docs": "jsdoc --configure jsdoc.json --verbose"
     },
     "repository": {
         "type": "git",
@@ -31,19 +32,16 @@
     ],
     "author": "Emeric Beaufays",
     "license": "MIT",
-    "peerDependencies": {
-        
-    },
     "dependencies": {
         "@jdultra/threedtiles": "9.1.22",
+        "epsg-index": "^1.0.0",
         "fast-simplex-noise": "^4.0.0",
         "gltf-validator": "^2.0.0-dev.3.9",
         "lodash": ">=4.17.20",
         "path-browserify": "^1.0.1",
+        "proj4": "^2.9.0",
         "regenerator-runtime": "^0.13.11",
-        "three": "^0.156.0",
-        "epsg-index": "^1.0.0",
-        "proj4": "^2.9.0"
+        "three": "^0.156.0"
     },
     "devDependencies": {
         "@babel/core": "^7.21.3",
