--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@jdultra/ultra-globe",
-    "version": "4.1.0",
+    "version": "4.2.0",
     "description": "A globe in threejs with support for WMS maps, elevation and OGC 3DTiles",
     "main": "dist/ultraglobe.min.js",
     "types": "dist/entry.d.ts",
@@ -41,7 +41,8 @@
         "path-browserify": "^1.0.1",
         "proj4": "^2.9.0",
         "regenerator-runtime": "^0.13.11",
-        "three": "^0.156.0"
+        "three": "^0.156.0",
+        "tooloud": "^2.0.4"
     },
     "devDependencies": {
         "@babel/core": "^7.21.3",
@@ -60,6 +61,7 @@
         "webpack-bundle-analyzer": "^4.8.0",
         "webpack-cli": "^4.10.0",
         "webpack-dev-server": "^4.12.0",
-        "whatwg-fetch": "^3.5.0"
+        "whatwg-fetch": "^3.5.0",
+        "worker-loader": "^3.0.8"
     }
 }
