--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@jdultra/ultra-globe",
-    "version": "4.2.5",
+    "version": "4.2.6",
     "description": "A globe in threejs with support for WMS maps, elevation and OGC 3DTiles",
     "main": "dist/ultraglobe.min.js",
     "types": "dist/entry.d.ts",
@@ -33,17 +33,18 @@
     "author": "Emeric Beaufays",
     "license": "MIT",
     "dependencies": {
-        "@jdultra/threedtiles": "^9.2.17",
+        "@jdultra/threedtiles": "^10.0.0",
         "epsg-index": "^1.0.0",
         "fast-simplex-noise": "^4.0.0",
         "gltf-validator": "^2.0.0-dev.3.9",
         "lodash": ">=4.17.20",
+        "moment": "^2.29.4",
+        "moment-timezone": "^0.5.43",
+        "noaa-gfs-js": "^1.0.0",
         "path-browserify": "^1.0.1",
         "proj4": "^2.9.0",
         "regenerator-runtime": "^0.13.11",
-        "tooloud": "^2.0.4",
-        "moment": "^2.29.4",
-        "moment-timezone": "^0.5.43"
+        "tooloud": "^2.0.4"
     },
     "devDependencies": {
         "@babel/core": "^7.21.3",
