--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@jdultra/ultra-globe",
-    "version": "4.5.9",
+    "version": "4.6.1",
     "description": "A globe in threejs with support for WMS maps, elevation and OGC 3DTiles",
     "main": "dist/ultraglobe.min.js",
     "types": "dist/entry.d.ts",
@@ -33,14 +33,19 @@
     "author": "Emeric Beaufays",
     "license": "MIT",
     "dependencies": {
-        "@jdultra/threedtiles": "^11.1.8",
+        "@jdultra/threedtiles": "^11.1.11",
+        "egm96-universal": "^1.1.0",
         "epsg-index": "^1.0.0",
         "fast-simplex-noise": "^4.0.0",
         "gltf-validator": "^2.0.0-dev.3.9",
+        "gopro-telemetry": "^1.2.8",
+        "gpmf-extract": "^0.1.2",
         "lodash": ">=4.17.20",
         "moment": "^2.29.4",
         "moment-timezone": "^0.5.43",
+        "mp4box": "^0.5.2",
         "noaa-gfs-js": "^1.0.0",
+        "path-browserify": "^1.0.1",
         "path-browserify": "^1.0.1",
         "proj4": "^2.9.0",
         "regenerator-runtime": "^0.13.11",
@@ -50,6 +55,7 @@
         "@babel/core": "^7.21.3",
         "@babel/preset-env": "^7.20.2",
         "babel-loader": "^8.3.0",
+        "buffer": "^6.0.3",
         "copy-webpack-plugin": "^6.3.2",
         "core-js": "^3.29.1",
         "css-loader": "^6.7.3",
@@ -59,7 +65,7 @@
         "mini-css-extract-plugin": "^1.6.2",
         "style-loader": "^3.3.2",
         "typescript": "^5.2.2",
-        "webpack": "^5.76.1",
+        "webpack": "^5.95.0",
         "webpack-bundle-analyzer": "^4.8.0",
         "webpack-cli": "^4.10.0",
         "webpack-dev-server": "^4.12.0",
