--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "name": "@jdultra/ultra-globe",
-    "version": "6.0.6",
+    "sideEffects": false,
+    "version": "6.0.7",
     "description": "Geospatial lib built with threejs",
     "main": "dist/ultraglobe.min.js",
     "types": "dist/entry.d.ts",
@@ -32,6 +33,9 @@
     ],
     "author": "Emeric Beaufays",
     "license": "MIT",
+    "peerDependencies": {
+        "three": "0.168.0"
+    },
     "dependencies": {
         "@jdultra/threedtiles": "^11.1.12",
         "cdt2d": "^1.0.0",
@@ -60,23 +64,34 @@
     "devDependencies": {
         "@babel/core": "^7.21.3",
         "@babel/preset-env": "^7.20.2",
+        "@babel/preset-react": "^7.25.9",
+        "@babel/preset-typescript": "^7.26.0",
         "babel-loader": "^8.3.0",
         "buffer": "^6.0.3",
+        "compression-webpack-plugin": "^11.1.0",
         "copy-webpack-plugin": "^6.3.2",
         "core-js": "^3.29.1",
         "css-loader": "^6.7.3",
         "file-loader": "^6.2.0",
         "html-loader": "^1.3.2",
         "html-webpack-plugin": "^4.5.0",
+        "image-minimizer-webpack-plugin": "^4.1.0",
+        "imagemin": "^9.0.0",
+        "imagemin-gifsicle": "^7.0.0",
+        "imagemin-jpegtran": "^8.0.0",
+        "imagemin-optipng": "^8.0.0",
+        "imagemin-svgo": "^11.0.1",
+        "install": "^0.13.0",
         "mini-css-extract-plugin": "^1.6.2",
+        "npm": "^10.9.0",
         "style-loader": "^3.3.2",
+        "ts-loader": "^9.5.1",
         "typescript": "^5.2.2",
         "webpack": "^5.95.0",
         "webpack-bundle-analyzer": "^4.8.0",
         "webpack-cli": "^4.10.0",
         "webpack-dev-server": "^4.12.0",
         "whatwg-fetch": "^3.5.0",
-        "worker-loader": "^3.0.8",
-        "ts-loader": "^9.5.1"
+        "worker-loader": "^3.0.8"
     }
 }
