--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@jdultra/ultra-globe",
     "sideEffects": false,
-    "version": "6.1.2",
+    "version": "6.1.3",
     "description": "Geospatial lib built with threejs",
     "main": "dist/ultraglobe.min.js",
     "types": "dist/entry.d.ts",
@@ -87,7 +87,6 @@
         "webpack-bundle-analyzer": "^4.8.0",
         "webpack-cli": "^4.10.0",
         "webpack-dev-server": "^4.12.0",
-        "whatwg-fetch": "^3.5.0",
-        "worker-loader": "^3.0.8"
+        "whatwg-fetch": "^3.5.0"
     }
 }
