--- a/package.json
+++ b/package.json
@@ -1,22 +1,23 @@
 {
     "name": "@jdultra/ultra-globe",
     "sideEffects": false,
-    "version": "6.1.10",
+    "version": "7.0.0",
     "description": "Geospatial lib built with threejs",
-    "main": "dist/ultraglobe.min.js",
+    "main": "dist/ultraglobe.cjs.js",
+    "module": "dist/ultraglobe.es.js",
+    "unpkg": "dist/ultraglobe.umd.js",
     "types": "dist/entry.d.ts",
     "files": [
         "dist/**/*",
         "README.md",
         "LICENSE"
     ],
+    "type": "module",
     "scripts": {
+        "build": "vite build --config vite.prod.config.js && npm run build:types",
         "build:types": "tsc --declaration --emitDeclarationOnly --allowJs --outDir dist",
-        "build": "webpack --config webpack.prod.config.js && npm run build:types",
-        "watch": "webpack --watch --config webpack.dev.config.js",
-        "dev": "webpack-dev-server --config webpack.dev.config.js",
-        "build-dev": "webpack --config webpack.dev.config.js",
-        "generate-docs": "jsdoc --configure jsdoc.json --verbose"
+        "generate-docs": "jsdoc --configure jsdoc.json --verbose",
+        "dev": "vite"
     },
     "repository": {
         "type": "git",
@@ -33,13 +34,15 @@
     ],
     "author": "Emeric Beaufays",
     "license": "MIT",
+    "peerDependencies": {
+        "three": "0.170.0"
+    },
     "dependencies": {
-        "@jdultra/threedtiles": "^11.1.13",
+        "@jdultra/threedtiles": "^12.0.1",
         "cdt2d": "^1.0.0",
         "clean-pslg": "^1.1.2",
         "earcut": "^3.0.0",
         "egm96-universal": "^1.1.1",
-        "fast-simplex-noise": "^4.0.0",
         "gltf-validator": "^2.0.0-dev.3.9",
         "gopro-telemetry": "^1.2.8",
         "gpmf-extract": "^0.1.2",
@@ -52,42 +55,22 @@
         "point-in-big-polygon": "^2.0.1",
         "polygon-clipping": "^0.15.7",
         "proj4": "^2.9.0",
-        "regenerator-runtime": "^0.13.11",
         "shapefile": "^0.6.6",
+        "shapefile.js": "^1.1.4",
         "tooloud": "^2.0.4",
         "uuid": "^10.0.0"
     },
     "devDependencies": {
-        "@babel/core": "^7.21.3",
-        "@babel/preset-env": "^7.20.2",
-        "@babel/preset-react": "^7.25.9",
-        "@babel/preset-typescript": "^7.26.0",
-        "babel-loader": "^8.3.0",
+        "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
+        "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
+        "@laynezh/vite-plugin-lib-assets": "^0.5.24",
+        "@rollup/plugin-terser": "^0.4.4",
+        "@types/three": "^0.169.0",
         "buffer": "^6.0.3",
-        "compression-webpack-plugin": "^11.1.0",
-        "copy-webpack-plugin": "^6.3.2",
-        "core-js": "^3.29.1",
-        "css-loader": "^6.7.3",
-        "file-loader": "^6.2.0",
-        "html-loader": "^1.3.2",
-        "html-webpack-plugin": "^4.5.0",
-        "image-minimizer-webpack-plugin": "^4.1.0",
-        "imagemin": "^9.0.0",
-        "imagemin-gifsicle": "^7.0.0",
-        "imagemin-jpegtran": "^8.0.0",
-        "imagemin-optipng": "^8.0.0",
-        "imagemin-svgo": "^11.0.1",
         "install": "^0.13.0",
-        "mini-css-extract-plugin": "^1.6.2",
-        "npm": "^10.9.0",
-        "style-loader": "^3.3.2",
-        "ts-loader": "^9.5.1",
-        "typescript": "^5.2.2",
-        "webpack": "^5.95.0",
-        "webpack-bundle-analyzer": "^4.8.0",
-        "webpack-cli": "^4.10.0",
-        "webpack-dev-server": "^4.12.0",
-        "whatwg-fetch": "^3.5.0",
-        "worker-loader": "^3.0.8"
+        "process": "^0.11.10",
+        "typescript": "^5.6.3",
+        "vite": "^5.4.10",
+        "vite-plugin-node-polyfills": "^0.22.0"
     }
 }
