--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@jdultra/ultra-globe",
     "sideEffects": false,
-    "version": "7.0.0",
+    "version": "7.0.1",
     "description": "Geospatial lib built with threejs",
     "main": "dist/ultraglobe.cjs.js",
     "module": "dist/ultraglobe.es.js",
@@ -64,11 +64,13 @@
         "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
         "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
         "@laynezh/vite-plugin-lib-assets": "^0.5.24",
+        "@rollup/plugin-node-resolve": "^15.3.0",
         "@rollup/plugin-terser": "^0.4.4",
         "@types/three": "^0.169.0",
         "buffer": "^6.0.3",
         "install": "^0.13.0",
         "process": "^0.11.10",
+        "rollup-plugin-web-worker-loader": "^1.6.1",
         "typescript": "^5.6.3",
         "vite": "^5.4.10",
         "vite-plugin-node-polyfills": "^0.22.0"
